--- a/4_1_Generations.tex
+++ b/4_1_Generations.tex
@@ -10,7 +10,7 @@ Along the same lines as generational garbage collectors in managed languages, \G
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=.75\linewidth]{figures/architecture}
+  \includegraphics[width=.75\linewidth]{Figures/architecture}
   \caption{\GP's different generations.}
   \label{fig:generations}
 \end{figure}
