--- a/4_2_Sys_components.tex
+++ b/4_2_Sys_components.tex
@@ -14,7 +14,7 @@ The role and interactions between these components are schematically illustrated
 
 \begin{figure}[H]
   \centering
-  \includegraphics[]{figures/components}
+  \includegraphics[]{Figures/components}
   \caption{\GP's abstract components and their interactions.}
   \label{fig:components}
 \end{figure}
