--- a/5_1_Monitoring.tex
+++ b/5_1_Monitoring.tex
@@ -18,7 +18,7 @@ Whenever needed, \GP{} can therefore query \textsc{InfluxDB} to learn about the 
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.7\linewidth]{figures/monitoring}
+\includegraphics[width=.7\linewidth]{Figures/monitoring}
 \caption{Overview of the monitoring support in \GP{}.}
 \label{fig:monitoring}
 \end{figure}
@@ -41,7 +41,7 @@ The resulting container envelopes are posted to the \GP{} scheduler, which is in
 
 \begin{figure}[t!]
 	\centering
-	\includegraphics[width=.7\linewidth]{figures/profiling}
+	\includegraphics[width=.7\linewidth]{Figures/profiling}
 	\caption{Container and node profiling in \GP{}.}
 	\label{fig:profiling}
 \end{figure}
