--- a/8_3_Genpack_setup.tex
+++ b/8_3_Genpack_setup.tex
@@ -1,6 +1,6 @@
 % -*- root: Document.tex -*-
 
-\section{Genpack Setup}
+\section{\GP{} Setup}
 \label{sec:genpacksetup}
 
 \GP{} can be downloaded at \genpackschedulerrepo{}.
